[package]
name = "mycraft"
description = "palapapa's Minecraft clone using wgpu"
license = "MIT"
repository = "https://github.com/palapapa/mycraft"
readme = "README.md"
keywords = ["minecraft", "gamedev", "graphics", "wgpu"]
categories = ["games"]
version = "0.1.0"
edition = "2024"

[dependencies]
assets_manager = { version = "0.13.1", features = ["hot-reloading"]}
bevy_ecs = "0.16.1"
bon = "3.7.1"
const_format = "0.2.35"
derive_more = { version = "2.1.1", features = ["from"] }
egui = "0.32.0"
egui-wgpu = "0.32.0"
egui-winit = "0.32.0"
env_logger = "0.11.8"
futures = "0.3.31"
getset = "0.1.6"
glam = { version = "0.30.5", features = ["debug-glam-assert"] }
log = "0.4.27"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
wesl = "0.2.0"
wgpu = { version = "25.0.2", features = ["wgsl"]}
winit = "0.30.11"

[build-dependencies]
walkdir = "2.5.0"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
# closure_returning_async_block = "warn"
deprecated_safe_2024 = "warn"
edition_2024_expr_fragment_specifier = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
# fuzzy_provenance_casts = "warn"
# if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
keyword-idents = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
# lossy_provenance_casts = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
# missing_copy_implementations = "warn"
# missing_debug_implementations = "warn"
# missing_docs = "warn"
missing_unsafe_on_extern = "warn"
# multiple_supertrait_upcastable = "warn"
# must_not_suspend = "warn"
non_ascii_idents = "warn"
# non_exhaustive_omitted_patterns = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
# rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
single_use_lifetimes = "warn"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
# Both this and unreachable_pub don't really apply do binary crates.
# unnameable_types = "warn"
# unqualified_local_imports = "warn"
# unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
# clippy::undocumented_unsafe_blocks already checks for this.
# unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
# unused_results = "warn"
# variant_size_differences = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
blanket_clippy_restriction_lints = "allow"
default_numeric_fallback = "allow"
enum_glob_use = "allow"
# unwrap_used already checks for the case where there is no documentation about
# why unwrap won't panic. Since expect requires a message, we will not lint
# against it.
expect_used = "allow"
impl_trait_in_params = "allow"
implicit_return = "allow"
inconsistent_struct_constructor = "allow"
indexing_slicing = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
# I don't like typing module names, so this would cause a lot of conflicts and make names confusingly short.
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
non_ascii_literal = "allow"
# Conflicts with match ergonomics and ref_patterns
pattern_type_mismatch = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
separated_literal_suffix = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unreachable = "allow"
# This is a subset of unwrap_used.
unwrap_in_result = "allow"
wildcard_enum_match_arm = "allow"
wildcard_imports = "allow"

[lints.rustdoc]
unescaped_backticks = "warn"
